<resources>
    <string name="app_name">Arduino WorkSheet</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string-array name="led_colors">
        <item>Красный</item>
        <item>Зеленый</item>
        <item>Синий</item>
    </string-array>
    <string name="title_activity_test">TestActivity</string>
    <string name="item_name">Название:</string>
    <string name="device_ip">IP-адрес:</string>
    <string name="device_port">Порт:</string>
    <string name="led_color">Цвет:</string>
    <string name="command_on">Команда (вкл):</string>
    <string name="command_off">Команда (выкл):</string>
    <string name="color">Цвет:</string>
    <string name="condition">Состояние:</string>
    <string name="binary_devices">Бинарные устройства</string>
    <string name="start_with">Начинается с:</string>
    <string name="end_with">Заканчивается:</string>
    <string name="maximum">Максимум:</string>
    <string name="sensors">Сенсоры</string>
    <string name="command">Команда:</string>
    <string name="delay">Задержка</string>
    <string name="control_device">Контроллируемые устройства</string>
    <string name="unit_celsius">\u2103</string>
    <string name="unit_fahrenheit">\u2109</string>

</resources>
