<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/device_name_et"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="120dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:textSize="8pt"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/device_ip_et"
        android:layout_marginTop="20dp"
        android:textSize="8pt"
        android:layout_below="@+id/device_name_et"
        android:layout_alignLeft="@+id/device_name_et"
        android:layout_alignStart="@+id/device_name_et" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_name"
        android:id="@+id/textView"
        android:layout_alignBottom="@+id/device_name_et"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="8pt"
        android:layout_alignTop="@+id/device_name_et"
        android:gravity="center_vertical" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_ip"
        android:id="@+id/textView2"
        android:textSize="8pt"
        android:layout_alignBottom="@+id/device_ip_et"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_alignTop="@+id/device_ip_et"
        android:gravity="center_vertical" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/device_port_et"
        android:textSize="8pt"
        android:layout_below="@+id/device_ip_et"
        android:layout_alignLeft="@+id/device_ip_et"
        android:layout_alignStart="@+id/device_ip_et"
        android:layout_marginTop="20dp"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_port"
        android:id="@+id/textView5"
        android:textSize="8pt"
        android:gravity="center_vertical"
        android:layout_alignBottom="@+id/device_port_et"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/device_port_et" />

</RelativeLayout>